// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={[Function]}
  className="snapshot-class"
  classes={
    Object {
      "menuItem": undefined,
      "selectIcon": undefined,
    }
  }
  component="div"
  count={20}
  data-qa="snapshot-qa"
  labelDisplayedRows={[Function]}
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      2,
      5,
      10,
    ]
  }
/>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={[Function]}
  className=""
  classes={
    Object {
      "menuItem": undefined,
      "selectIcon": undefined,
    }
  }
  component="div"
  count={20}
  labelDisplayedRows={[Function]}
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      2,
      5,
      10,
    ]
  }
/>
`;

exports[`should match snapshot 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={[Function]}
  className=""
  classes={
    Object {
      "menuItem": undefined,
      "selectIcon": undefined,
    }
  }
  component="div"
  count={20}
  labelDisplayedRows={[Function]}
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      5,
      10,
    ]
  }
/>
`;
